--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,10 +1,5 @@
 .fotoPrincipalFondoContacto{
-    position: relative;
-    background:$colorFondoClaro;
-    overflow: hidden;
-    margin-top: 150px;
-    width: 100vw;
-    height: 900px;
+    @include fotosPrincipales;
     h1 {
         font-family: $fuenteEspecial;
         padding: 300px 100px;
@@ -38,7 +33,7 @@
     grid-template-rows: 1fr;
     grid-template-areas:
     "form";
-    width: 100wv;
+    width: 100%;
     justify-items: center;
     align-items: center;
     .formulario{
