--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -4,43 +4,39 @@
     header{
             .menu{
                 display:none;
-            /* width: 100vw; 
-            height: 85px; 
-                ul{
-                    display: flex;
-                    flex-direction: wrap;
-                    justify-content: space-around;
-                    align-items: center;
-                    padding: 0;
-
-                    li{
-                        padding: 0;
-                        .logoMenu{
-                            width: 90px;
-                            height: 90px;
-                            padding: 0;
-                        }
-                        a{
-                        font-size: 15px;
-                        padding: 0px 0px;
-                        } 
-                    }
-                } */
             }
             .navbar{
-                display: inline-block;
+                display:inline-flex;
+                height: 75px;
+                padding: 0; 
+                background-color: $colorMenuNav;
+                .logoMenu{
+                    width: 75px;
+                    height: 75px;
+                }
+                div.container-fluid{
+                    background-color: $colorMenuNav;
+                }
+                a{
+                    font-family: $fuentePrincipal;
+                }
+                .navbar-brand{
+                    padding: 0;
+                }
+                
             }
         }
+
     /* INICIO */
     .fotoPrincipalFondoInicio{
-        @include fotosPrincipales;
+        @include fotosPrincipalesResp;
         h1 {
             padding: 150px 100px;
             font-size: 30px;
         }
     }
     .destacadosGrid{
-        margin: 40px 50px; 
+        margin: 40px 20px; 
         width: 90%;
         height: 800px ;
         grid-template-columns: 1fr;
@@ -84,7 +80,7 @@
 
     /* TOP 10 */
     .fotoPrincipalFondoTop10{
-        @include fotosPrincipales;
+        @include fotosPrincipalesResp;
         h1 {
             padding: 150px 100px;
             font-size: 30px;
@@ -116,7 +112,7 @@
 
     /* CONTACTO */
     .fotoPrincipalFondoContacto{
-        @include fotosPrincipales;
+        @include fotosPrincipalesResp;
         h1 {
             padding: 150px 100px;
             font-size: 30px;
@@ -136,7 +132,7 @@
     }
     /* ARTISTAS */
     .fotoPrincipalFondoArtistas{
-        @include fotosPrincipales;
+        @include fotosPrincipalesResp;
         h1 {
             padding: 150px 100px;
             font-size: 30px;
@@ -166,13 +162,14 @@
     }
     /* CONOCE MAS */
     .fotoPrincipalFondoConoce{
-        @include fotosPrincipales;
+        @include fotosPrincipalesResp;
         h1 {
             padding: 150px 100px;
             font-size: 30px;
         }
     }
     .historiaGrid{
+        width: 90%;
         grid-template-columns: 1fr; 
         grid-template-rows: 0.7fr 0.7fr 0.5fr; 
         grid-template-areas: 
