--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -169,8 +169,8 @@
         }
     }
     .historiaGrid{
-        width: 90%;
-        grid-template-columns: 1fr; 
+        width: 80%;
+        grid-template-columns: 0.7fr; 
         grid-template-rows: 0.7fr 0.7fr 0.5fr; 
         grid-template-areas: 
         "raiz" 
@@ -178,8 +178,8 @@
         "referentes"; 
     }    
     .raiz{
-        width: 90%;
-        margin: 20px 40px;
+        width: 100%;
+        margin: 20px 20px;
         @include flexWrap;
         h2{
             font-size: 20px ;
@@ -187,8 +187,8 @@
         p{
             width: 90%;
             font-size: 15px;
-            padding: 10px 10px 5px 10px ;
-            margin-bottom: 0;
+            padding: 5px 10px 5px 5px ;
+            margin-right: 0;
         }
         .raizVideo{
             width: 400px;
@@ -236,7 +236,6 @@
         width: 100%;    
         grid-template-columns: 0.5fr 0.5fr; 
         grid-template-rows: 0.1fr 0.1fr 0.1fr; 
-  /*       gap: 10px 14px; */ 
         grid-template-areas: 
         "logo nosotros"
         "logo redes"
@@ -259,6 +258,10 @@
         }
         .news{
             margin: 5px;
+            padding-bottom: 30px;
+        }
+        input{
+            width: 70%;
         }
         
     }
