--- a/scss/_conoce.scss
+++ b/scss/_conoce.scss
@@ -52,6 +52,7 @@
         padding: 20px 20px 10px 20px;
         font-weight: 500;
         font-family: $fuenteEspecial;
+        text-align: center;
     }
     p{
         width: 600px;
@@ -82,6 +83,7 @@
         padding: 20px 20px 10px 20px;
         font-weight: 500;
         font-family: $fuenteEspecial;
+        text-align: center;
     }
     p{
         width: 600px;
