--- a/css/styles.css
+++ b/css/styles.css
@@ -33,11 +33,12 @@ header .menu {
   position: fixed;
   top: 0;
   z-index: 1000;
-  background-color: rgba(224, 225, 221, 0.6);
+  background-color: rgba(225, 224, 221, 0.6);
   text-align: center;
   width: 100vw;
   height: 100px;
   padding-left: 0;
+  margin-right: 0;
 }
 header .menu li {
   display: inline-block;
@@ -54,7 +55,9 @@ header .menu li a {
   font-size: 25px;
   display: block;
   padding: 0px 20px;
-  /* padding-bottom: 10px; */
+}
+header .menu li a:hover {
+  font-weight: 500;
 }
 header .navbar {
   display: none;
@@ -98,13 +101,17 @@ header .navbar {
 .gridFooter .news .newsletter {
   font-size: 15px;
 }
+.gridFooter .logoRedes {
+  width: 60px;
+  height: 60px;
+}
 
 .fotoPrincipalFondoInicio {
   position: relative;
   background: #d9ae94;
   overflow: hidden;
   margin-top: 100px;
-  width: 100vw;
+  width: 100%;
   height: 900px;
 }
 .fotoPrincipalFondoInicio h1 {
@@ -161,7 +168,7 @@ header .navbar {
 
 .foto1, .foto5, .foto4, .foto3, .foto2 {
   grid-area: foto1;
-  background-image: url("../multimedia/destacadoMaiara2.png");
+  background-image: url("../multimedia/destacadoMaiara (2).jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -176,7 +183,7 @@ header .navbar {
 
 .foto2 {
   grid-area: foto2;
-  background-image: url("../multimedia/destacadoHenrJu.png");
+  background-image: url("../multimedia/destacadoHenrJu.jpg");
 }
 .foto2:hover {
   opacity: 1;
@@ -185,7 +192,7 @@ header .navbar {
 
 .foto3 {
   grid-area: foto3;
-  background-image: url("../multimedia/destacadoLuan.png");
+  background-image: url("../multimedia/destacadoLuan.jpg");
 }
 .foto3:hover {
   opacity: 1;
@@ -194,7 +201,7 @@ header .navbar {
 
 .foto4 {
   grid-area: foto4;
-  background-image: url("../multimedia/destacadoMarilia.png");
+  background-image: url("../multimedia/destacadoMarilia.jpg");
 }
 .foto4:hover {
   background-image: url("../multimedia/MariliaGifAlto.gif");
@@ -202,7 +209,7 @@ header .navbar {
 
 .foto5 {
   grid-area: foto5;
-  background-image: url("../multimedia/destacadoGusLima.png");
+  background-image: url("../multimedia/destacadoGusLima.jpg");
 }
 .foto5:hover {
   background-image: url("../multimedia/GustavoGifAlto.gif");
@@ -213,7 +220,7 @@ header .navbar {
   background: #d9ae94;
   overflow: hidden;
   margin-top: 100px;
-  width: 100vw;
+  width: 100%;
   height: 900px;
 }
 .fotoPrincipalFondoArtistas h1 {
@@ -242,10 +249,9 @@ header .navbar {
 }
 
 .boxArtistasIndividual {
-  box-shadow: inset -1px 3px 8px 5px #b78b69;
   margin: 40px 30px;
   border-radius: 20px;
-  background-color: #b78b69;
+  background-color: rgba(181, 132, 99, 0.5);
 }
 
 .boxFlex {
@@ -296,11 +302,13 @@ header .navbar {
   width: 180px;
   height: 50px;
   border-radius: 20px;
+  text-decoration: none;
   color: black;
-  background-color: #d9ae94;
+  background-color: rgba(181, 132, 99, 0.5);
+  border-color: #b58463;
 }
 .boxArtistas a:hover {
-  background-color: rgba(224, 225, 221, 0.6);
+  background-color: #d9ae94;
 }
 
 .fotoPrincipalFondoConoce {
@@ -308,7 +316,7 @@ header .navbar {
   background: #d9ae94;
   overflow: hidden;
   margin-top: 100px;
-  width: 100vw;
+  width: 100%;
   height: 900px;
 }
 .fotoPrincipalFondoConoce h1 {
@@ -351,8 +359,7 @@ header .navbar {
 .raiz {
   grid-area: raiz;
   width: 600px;
-  box-shadow: inset -1px 3px 8px 5px #b78b69;
-  background-color: #b78b69;
+  background-color: rgba(181, 132, 99, 0.5);
   margin: 50px 0px;
   border-radius: 20px;
 }
@@ -381,8 +388,7 @@ header .navbar {
 .sofrencia {
   grid-area: sofrencia;
   width: 600px;
-  background-color: #b78b69;
-  box-shadow: inset -1px 3px 8px 5px #b78b69;
+  background-color: rgba(181, 132, 99, 0.5);
   margin: 50px 0px;
   border-radius: 20px;
 }
@@ -428,7 +434,7 @@ header .navbar {
   background: #d9ae94;
   overflow: hidden;
   margin-top: 100px;
-  width: 100vw;
+  width: 100%;
   height: 900px;
 }
 .fotoPrincipalFondoContacto h1 {
@@ -469,9 +475,8 @@ header .navbar {
 .formularioGrid .formulario {
   grid-area: form;
   width: 600px;
-  box-shadow: inset -1px 3px 8px 5px #b78b69;
   border-radius: 20px;
-  background-color: #b78b69;
+  background-color: rgba(181, 132, 99, 0.5);
   margin: 50px 0px;
   padding: 30px;
   font-weight: normal;
@@ -500,21 +505,20 @@ header .navbar {
   margin: 15px;
 }
 .formularioGrid .botonBorrar, .formularioGrid .botonEnviar {
-  background-color: #d9ae94;
+  background-color: rgba(181, 132, 99, 0.5);
   border-radius: 30px;
   margin: 10px;
   border-color: #d9ae94;
 }
 .formularioGrid .botonBorrar:hover, .formularioGrid .botonEnviar:hover {
-  background-color: rgba(224, 225, 221, 0.6);
-  border-color: rgba(224, 225, 221, 0.6);
+  background-color: #d9ae94;
 }
 .fotoPrincipalFondoTop10 {
   position: relative;
   background: #d9ae94;
   overflow: hidden;
   margin-top: 100px;
-  width: 100vw;
+  width: 100%;
   height: 900px;
 }
 .fotoPrincipalFondoTop10 h1 {
@@ -555,16 +559,17 @@ header .navbar {
   grid-area: spotify;
   width: 90%;
   height: 600px;
-  background-color: #b58463;
+  background-color: rgba(181, 132, 99, 0.5);
   overflow: auto;
-  box-shadow: inset -1px 3px 8px 5px #b58463;
   border-radius: 20px;
   margin: 50px 0px;
 }
 .cancionesGrid .canciones h2 {
   text-align: center;
+  font-size: 40px;
   padding: 30px;
   font-weight: 500;
+  font-family: "Secular One", sans-serif;
 }
 .cancionesGrid .canciones .listaSpotify {
   height: 450px;
@@ -574,6 +579,31 @@ header .navbar {
 .cancionesGrid .album1, .cancionesGrid .album5, .cancionesGrid .album4, .cancionesGrid .album3, .cancionesGrid .album2 {
   padding: 15px;
   grid-area: album1;
+  background-color: #b58463;
+  border-radius: 20px;
+  margin: 10px;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.cancionesGrid .album1 iframe, .cancionesGrid .album5 iframe, .cancionesGrid .album4 iframe, .cancionesGrid .album3 iframe, .cancionesGrid .album2 iframe {
+  display: none;
+}
+.cancionesGrid .album1 h3, .cancionesGrid .album5 h3, .cancionesGrid .album4 h3, .cancionesGrid .album3 h3, .cancionesGrid .album2 h3 {
+  font-size: 25px;
+  text-align: center;
+}
+.cancionesGrid .album1:hover, .cancionesGrid .album5:hover, .cancionesGrid .album4:hover, .cancionesGrid .album3:hover, .cancionesGrid .album2:hover {
+  height: 100%;
+  background-color: rgba(181, 132, 99, 0.5);
+}
+.cancionesGrid .album1:hover h3, .cancionesGrid .album5:hover h3, .cancionesGrid .album4:hover h3, .cancionesGrid .album3:hover h3, .cancionesGrid .album2:hover h3 {
+  display: none;
+}
+.cancionesGrid .album1:hover iframe, .cancionesGrid .album5:hover iframe, .cancionesGrid .album4:hover iframe, .cancionesGrid .album3:hover iframe, .cancionesGrid .album2:hover iframe {
+  display: inline-block;
 }
 .cancionesGrid .album2 {
   grid-area: album2;
@@ -598,7 +628,7 @@ header .navbar {
     display: inline-flex;
     height: 75px;
     padding: 0;
-    background-color: rgba(224, 225, 221, 0.6);
+    background-color: rgba(225, 224, 221, 0.6);
   }
   header .navbar .logoMenu {
     width: 75px;
