--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,8 @@ $colorFondoMedio: #b58463;
 $colorFondoPscuro: #b78b69;
 $colorTextoBlack: black;
 $colorTitulosFoto: #151514b3;
-$colorMenuNav: rgba(224,225,221,.6);
+$colorMenuNav: rgba(225, 224, 221, 0.6);
+$colorOpacity: rgba(181, 132, 99, 0.5);
 $colorBordesBox: #b58463;
 /* $colorFondoClaro: #e0e1dd;
 $colorFondoMedio:#b9bab3;
