--- a/scss/_conoce.scss
+++ b/scss/_conoce.scss
@@ -43,8 +43,7 @@
 .raiz{
     grid-area: raiz;
     width: 600px;
-    box-shadow: inset -1px 3px 8px 5px $colorFondoPscuro;
-    background-color: $colorFondoPscuro;
+    background-color: $colorOpacity;
     margin: 50px 0px; 
     border-radius: 20px;  
     h2{
@@ -74,8 +73,7 @@
 .sofrencia{
     grid-area: sofrencia;
     width: 600px;
-    background-color: $colorFondoPscuro;
-    box-shadow: inset -1px 3px 8px 5px $colorFondoPscuro;
+    background-color: $colorOpacity;
     margin: 50px 0px; 
     border-radius: 20px;  
     h2{
