--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -39,9 +39,8 @@
     .formulario{
         grid-area: form;
         width: 600px;
-        box-shadow: inset -1px 3px 8px 5px $colorFondoPscuro;
         border-radius: 20px;
-        background-color: $colorFondoPscuro;
+        background-color: $colorOpacity;
         margin: 50px 0px;
         padding: 30px;
         font-weight: normal;
@@ -78,13 +77,12 @@
     }
 
     .botonBorrar{
-        background-color: $colorFondoClaro;
+        background-color: $colorOpacity;
         border-radius: 30px;
         margin: 10px;
         border-color: $colorFondoClaro;
         &:hover{
-            background-color: $colorMenuNav;
-            border-color: $colorMenuNav;
+            background-color: $colorFondoClaro;
         }
     }
 
