--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -24,6 +24,6 @@
     background:$colorFondoClaro;
     overflow: hidden;
     margin-top: 100px;
-    width: 100vw;
+    width: 100%;
     height: 900px;
 }
