--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -66,33 +66,33 @@
         margin: 5px 10px 5px 10px;
         background-image: url(../multimedia/destacadoMaiaraHor.png);
         &:hover{
-            background-image: url("../multimedia/MaiaraGifChico.gif");
+            background-image: url("../multimedia/MaiaraGifChico.jpg");
         }
     }
 
     .foto2{
         background-image: url(../multimedia/destacadoHenrJuHor.png);
         &:hover{
-            background-image: url("../multimedia/HenrGifChico.gif");
+            background-image: url("../multimedia/HenrGifChico.jpg");
         }
     }
 
     .foto3{
         background-image: url(../multimedia/destacadoLuanHor.png);
         &:hover{
-            background-image: url("../multimedia/LuanGifChico.gif");
+            background-image: url("../multimedia/LuanGifChico.jpg");
         }
     }
 
     .foto4{
         background-image: url(../multimedia/destacadoMariliaHor.jpg);
         &:hover{
-            background-image: url("../multimedia/MariliaGifChico.gif");
+            background-image: url("../multimedia/MariliaGifChico.jpg");
         }
     }
     .foto5{
         margin-bottom: 10px;
-        background-image: url(../multimedia/destacadoGusLimaHor.png);
+        background-image: url(../multimedia/destacadoGusLimaHor.jpg);
         &:hover{
             background-image: url("../multimedia/GustavoGifChico.gif");
         }
